--- a/semitec/package.json
+++ b/semitec/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
