--- a/semitec/package.json
+++ b/semitec/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.1.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
