--- a/semitec/package.json
+++ b/semitec/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "highcharts-react-official": "^3.2.1",
     "next": "14.1.4",
@@ -18,8 +19,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-select": "^5.8.0",
-    "yup": "^1.4.0",
-    "crypto-js": "^4.2.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
