--- a/semitec/package.json
+++ b/semitec/package.json
@@ -13,7 +13,7 @@
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "highcharts-react-official": "^3.2.1",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
