--- a/semitec/.env.local
+++ b/semitec/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_HOST='http://localhost:5000'
+NEXT_PUBLIC_API_HOST='https://semitec-api.onrender.com'
 NEXT_PUBLIC_ENCRYPT_KEY='R7tYf2GqZs5D9ePx'
