--- a/semitec/package.json
+++ b/semitec/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "npm run build && npm start"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
